# financial-analysis

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: test.yml
app/: db.py  jobs.py  main.py  models.py  scheduler.py  storage.py
app/routers/: __init__.py  analysis.py  auth.py  holdings.py  stock.py
app/schemas/: __init__.py  analysis.py  holding.py
app/services/: alphavantage.py  analysis.py  holdings.py
app/users/: __init__.py  manager.py
tests/: conftest.py  test_main.py
tests/integration/: test_analysis.py  test_endpoints.py  test_holdings.py  test_stock.py
tests/unit/: test_alphavantage.py  test_services.py
