[project]
name = "financial-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "fastapi-users[sqlalchemy]>=15.0.4",
    "fastapi[standard]",
    "greenlet>=3.3.1",
    "httpx>=0.28.1",
    "sqlmodel>=0.0.32",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.11",
]
